# la-musica

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md  lamusica-checkpoint.md
.github/workflows/: ci.yml  release.yml
apps/daw/: CMakeLists.txt  Info.plist.in
apps/daw/resources/i18n/: en.txt  es.txt  fr.txt
apps/daw/resources/macos/en.lproj/: InfoPlist.strings
apps/daw/resources/macos/es.lproj/: InfoPlist.strings
apps/daw/resources/macos/fr.lproj/: InfoPlist.strings
apps/daw/src/: main.cpp  main.mm  main_juce.cpp
apps/daw/src/i18n/: Localization.cpp  Localization.hpp  NumberFormat.cpp  NumberFormat.hpp  StringTables.cpp  StringTables.hpp
apps/daw/src/onboarding/: GuidedTour.cpp  GuidedTour.hpp  ProjectTemplates.cpp  ProjectTemplates.hpp  WelcomeWindow.cpp  WelcomeWindow.hpp
apps/daw/src/ui/a11y/: AccessibleControl.cpp  AccessibleControl.hpp  ContrastPreferences.cpp  ContrastPreferences.hpp  LiveRegion.cpp  LiveRegion.hpp  MotionPreferences.cpp  MotionPreferences.hpp
apps/mcpd/: CMakeLists.txt
apps/mcpd/src/: main.cpp
apps/plugin_scan_worker/: CMakeLists.txt
apps/plugin_scan_worker/src/: main.cpp
cmake/: CheckDependencyLock.cmake  CheckMarkdown.cmake  CompilerWarnings.cmake  VerifyPackage.cmake  version.hpp.in
docs/: user-manual.md
docs/architecture/: 002-build-and-dependencies.md  003-plugin-hosting-safety.md  architecture-baseline.md
docs/developer/: build-and-test.md  command-api.md  dependencies.md  localization.md  mcp-tools.md  project-format.md
docs/mission/: product-mission.md
docs/performance/: realtime-policy.md
docs/planning/: production-readiness-assessment.md  production-roadmap.md
docs/planning/tasks/: P01-format-integrity-durable-save.md  P02-test-framework-and-fuzz-harness.md  P03-unified-command-history.md  P04-live-coreaudio-realtime-thread.md  P05-audio-graph-snapshot-spsc-queue.md  P06-realtime-safety-harness-tsan.md  P07-generic-multitrack-authoring-api.md  P08-binary-sidecar-format-autosave.md  P09-faithful-graphcompiler-render.md  P10-streaming-wav-and-recording-io.md  P11-plugin-host-and-scanner.md  P12-plugin-graph-node-rt-params.md  P13-plugin-state-and-editor-windows.md  P14-plugin-delay-compensation-freeze.md  P15-buses-sends-strips-metering.md  P16-live-midi-io-routing.md  P17-live-recording-monitoring-punch.md  P18-sample-accurate-automation.md  P19-interactive-daw-shell.md  P20-transport-bar-engine-bridge.md  P21-arrangement-timeline-clip-editing.md  P22-mixer-plugin-recording-ui.md  P23-drums-patterns-browser-export-ui.md  P24-mcp-json-rpc-server.md  P25-live-mcp-daw-bridge-daemon.md  P26-determinism-and-rt-verification.md  P27-release-signing-notarization.md  P28-warp-stretch-pitch-dsp.md  P29-project-sample-rate-independence.md  P30-accessibility-voiceover-keyboard.md  P31-localization-i18n-spanish.md  P32-crash-reporting-consent-privacy.md  P33-comp-segment-rendering.md  (+3 more)
docs/process/: agent-execution-rules.md
docs/release/: macos-distribution.md  privacy-and-diagnostics.md  release-checklist.md  security-disclosure.md  versioning.md
docs/schemas/: cli-output-v1.schema.json  mcp-edit-tools-v1.md  mcp-query-tools-v1.md  mcp-render-tools-v1.md  mcp-workflow-plans-v1.md  project-v1.schema.json
docs/tasks/: 000-task-template.md  007-arrangement-timeline.md  011-piano-roll-midi-editing.md  024-performance-stress-realtime.md  026-pin-juce-production-app.md  027-production-daw-shell.md  032-mixer-routing-automation-ui.md  033-browser-assets-import-record-export-ux.md  034-production-mcp-app-integration.md  036-release-hardening-signing-docs-examples.md  README.md
fixtures/drum-kits/: basic-starter-kit.json
fixtures/empty.Project.lamusica/: project.json
fixtures/examples/: README.md
fixtures/stress/: README.md
libs/audio/: CMakeLists.txt
libs/commands/: CMakeLists.txt
libs/crash_report/: CMakeLists.txt
libs/mcp_bridge/: CMakeLists.txt
libs/mcp_bridge/include/lamusica/mcp_bridge/: Capability.hpp  DaemonSession.hpp  EditTools.hpp  Orchestration.hpp  Protocol.hpp  QueryTools.hpp  RenderTools.hpp
libs/mcp_bridge/src/: Capability.cpp  DaemonSession.cpp  EditTools.cpp  Orchestration.cpp  Protocol.cpp  QueryTools.cpp  RenderTools.cpp
libs/plugin_host/: CMakeLists.txt
libs/plugin_host/include/lamusica/plugin_host/: PluginHostCapabilities.hpp  PluginScanCacheFile.hpp  PluginScanWorker.hpp
libs/plugin_host/src/: PluginHostCapabilities.cpp  PluginScanCacheFile.cpp  PluginScanWorker.cpp
libs/session/: CMakeLists.txt
libs/session/include/lamusica/session/: ApplicationSession.hpp  Assets.hpp  AudioClipEditing.hpp  Automation.hpp  ClipLauncher.hpp  DiagnosticsScrubber.hpp  DrumMachine.hpp  Export.hpp  GraphCompiler.hpp  Midi.hpp  Mixer.hpp  Pattern.hpp  Performance.hpp  PianoRoll.hpp  Plugin.hpp  Project.hpp  ProjectDocument.hpp  ProjectManifest.hpp  StarterProject.hpp  Timeline.hpp  Warp.hpp  WarpDsp.hpp
libs/session/src/: ApplicationSession.cpp  Assets.cpp  AudioClipEditing.cpp  Automation.cpp  ClipLauncher.cpp  DiagnosticsScrubber.cpp  DrumMachine.cpp  Export.cpp  GraphCompiler.cpp  Midi.cpp  Mixer.cpp  Pattern.cpp  Performance.cpp  PianoRoll.cpp  Plugin.cpp  Project.cpp  ProjectDocument.cpp  ProjectManifest.cpp  StarterProject.cpp  Timeline.cpp  Warp.cpp  WarpDsp.cpp
scripts/: archive-dsyms.sh  notarize-macos.sh  sbom.sh  sign-checksums.sh  sign-macos.sh  verify-ci-workflow.sh  verify-provenance.sh  verify-release-evidence.sh  verify-release-workflow.sh  verify-signature.sh  verify-symbolication.sh
tests/: CMakeLists.txt
tests/audio_correctness/: warp_spectral_tests.cpp
tests/behavior/: session_behavior_tests.cpp
tests/determinism/: render_determinism_tests.cpp
tests/determinism/golden/: render-golden.float32  render-golden.sha256
tests/fixtures/: artifact_assertions.cpp  mcp_fixture_client.cpp
tests/perf/: rt_deadline_bench.cpp
tests/plugin_hosting/: plugin_host_tests.cpp
tests/unit/: bootstrap_tests.cpp  i18n_tests.cpp  onboarding_tests.cpp
tools/cli/: CMakeLists.txt
tools/perf/: README.md
(+108 files in other folders)
